Fixes some inspections.